# satfon-simulation

./: .gitignore  CMakeLists.txt  Makefile  SConscript  debugInterface.cpp  debugInterface.hpp  debugInterfaceClient.cpp  debugInterfaceClient.hpp  flashCell.cpp  flashCell.h  types.hpp
flashView/: CMakeLists.txt  SConstruct  cellViewer.rc  cellviewer.qrc  flashviewer.cpp  flashviewer.h  main.cpp  mramViewer.hpp
flashView/GeneratedFiles/: qrc_cellviewer.cpp  ui_cellviewer.h
mramView/: SConstruct  main.cpp  moc_mramviewer.cc  mramViewer.aps  mramViewer.hpp  mramViewer.qrc  mramViewer.rc  mramViewer.ui  mramviewer.cpp  mramviewer.h
mramView/GeneratedFiles/: ui_mramviewer.h
simu/: SConscript  debugClient.cpp  debugClient.hpp  debugInterface.cpp  debugInterface.hpp  debugInterfaceClient.cpp  debugInterfaceClient.hpp  debugServer.cpp  debugServer.hpp  flashCell.cpp  flashCell.h  flashCell.hpp  flashDebugInterface.cpp  flashDebugInterface.hpp  flashDebugInterfaceClient.cpp  flashDebugInterfaceClient.hpp  mram.cpp  mram.hpp  mramDebugInterfaceClient.cpp  mramDebugInterfaceClient.hpp  types.hpp
simu/config/simu/: config.hpp
test/: SConstruct  example.cpp  flashExample.cpp  mramExample.cpp
tests/: example.cpp
